--- a/portfolio.css
+++ b/portfolio.css
@@ -24,7 +24,7 @@ main {
     border: 3px solid yellow;
     border-radius: 15px;
     background-color: rgba(0, 0, 0, 0.507);
-    background-image: url(./passport2.png);
+    background-image: url(./passport.png);
     background-repeat: no-repeat;
     background-size: contain;
     background-blend-mode: multiply;
@@ -104,3 +104,198 @@ i.fa {
     padding: 0.7rem 1.7rem;
     border-bottom-right-radius: 0.9rem;
 }
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 480px) {
+    .container {
+        margin-top: 1rem;
+        flex-direction: column;
+        background-position: center;
+    }
+
+    .side-nav {
+        display: flex;
+        justify-content: space-around;
+        writing-mode: horizontal-tb;
+        transform: unset;
+        margin: 10px 0px 0px 0px;
+    }
+
+    .side-nav > li{
+        font-weight: unset;
+        display: unset;
+        letter-spacing: unset;
+        padding-top: unset;
+    }
+
+    .introduction {
+        padding: 3rem 0 0 1rem;
+    }
+    
+    .greet, .job {
+        font-size: 1rem;
+        margin-bottom: 1rem;
+    }
+    
+    .name {
+        font-size: 1.5rem;
+    }
+    
+    .role p, .contact p {
+        font-size: 1rem;
+    }
+
+    .contact, .role {
+        margin: 1rem 0 1rem 1rem;
+    }
+    
+    i.fa {
+        padding-top: 0.6rem;
+        padding-right: 0.6rem;
+        font-size: 1rem;
+    }
+    
+    .hire-me {
+        font-size: 1rem;
+        padding: 0.5rem 1.3rem;
+    }
+    
+    .contact-me {
+        font-size: 1rem;
+        padding: 0.5rem 1.3rem;
+        border-bottom-right-radius: 0.9rem;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .container {
+        margin-top: 1rem;
+        flex-direction: column;
+        background-position: center;
+    }
+
+    .side-nav {
+        display: flex;
+        justify-content: space-around;
+        writing-mode: horizontal-tb;
+        transform: unset;
+        margin: 10px 0px 0px 0px;
+    }
+
+    .side-nav > li{
+        font-weight: unset;
+        display: unset;
+        letter-spacing: unset;
+        padding-top: unset;
+    }
+
+    .introduction {
+        padding: 3rem 0 0 1rem;
+    }
+    
+    .greet, .job {
+        font-size: 1rem;
+        margin-bottom: 1rem;
+    }
+    
+    .name {
+        font-size: 1.5rem;
+    }
+    
+    .role p, .contact p {
+        font-size: 1rem;
+    }
+
+    .contact, .role {
+        margin: 1rem 0 1rem 1rem;
+    }
+    
+    i.fa {
+        padding-top: 0.6rem;
+        padding-right: 0.6rem;
+        font-size: 1rem;
+    }
+    
+    .hire-me {
+        font-size: 1rem;
+        padding: 0.5rem 1.3rem;
+    }
+    
+    .contact-me {
+        font-size: 1rem;
+        padding: 0.5rem 1.3rem;
+        border-bottom-right-radius: 0.9rem;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and below) */
+@media only screen and (max-width: 768px) {
+    .container {
+        margin-top: 1rem;
+        flex-direction: column;
+        background-position: center;
+    }
+
+    .side-nav {
+        display: flex;
+        justify-content: space-around;
+        writing-mode: horizontal-tb;
+        transform: unset;
+        margin: 10px 0px 0px 0px;
+    }
+
+    .side-nav > li{
+        font-weight: unset;
+        display: unset;
+        letter-spacing: unset;
+        padding-top: unset;
+    }
+
+    .introduction {
+        padding: 3rem 0 0 1rem;
+    }
+    
+    .greet, .job {
+        font-size: 1rem;
+        margin-bottom: 1rem;
+    }
+    
+    .name {
+        font-size: 1.5rem;
+    }
+    
+    .role p, .contact p {
+        font-size: 1rem;
+    }
+
+    .contact, .role {
+        margin: 1rem 0 1rem 1rem;
+    }
+    
+    i.fa {
+        padding-top: 0.6rem;
+        padding-right: 0.6rem;
+        font-size: 1rem;
+    }
+    
+    .hire-me {
+        font-size: 1rem;
+        padding: 0.5rem 1.3rem;
+    }
+    
+    .contact-me {
+        font-size: 1rem;
+        padding: 0.5rem 1.3rem;
+        border-bottom-right-radius: 0.9rem;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (max-width: 992px) {
+    .side-nav{
+        margin: 40px 0 0 40px;
+    }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {}
