--- a/portfolio.css
+++ b/portfolio.css
@@ -31,6 +31,7 @@ main {
     background-position: 5rem;
     display: flex;
     justify-content: space-between;
+    height: 90vh;
 }
 
 .side-nav{
@@ -120,15 +121,14 @@ i.fa {
         width: unset;
         border: unset;
         border-radius: unset;
-        height: 100vh;
+        height: 80vh;
     }
 
     .side-nav {
-        display: flex;
-        justify-content: space-around;
+        background-color: violet;
         writing-mode: horizontal-tb;
         transform: unset;
-        margin: 10px 0px 0px 0px;
+        margin: unset;
     }
 
     .side-nav > li{
@@ -139,7 +139,7 @@ i.fa {
     }
 
     .introduction {
-        padding: 3rem 0 0 1rem;
+        padding: 0.5rem 0 0 1rem;
     }
     
     .greet, .job {
@@ -262,7 +262,7 @@ i.fa {
     }
 
     .introduction {
-        padding: 3rem 0 0 1rem;
+        padding: 0rem 0 0 1rem;
     }
     
     .greet, .job {
@@ -301,11 +301,7 @@ i.fa {
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (max-width: 992px) {
-    .side-nav{
-        margin: 40px 0 0 40px;
-    }
-}
+@media only screen and (max-width: 992px) {}
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {}
