--- a/portfolio.css
+++ b/portfolio.css
@@ -376,12 +376,12 @@ form {
         padding: 1rem 1rem;
     }
     
-    .my-form {
+    /* .my-form {
         width: 55%;
     }
     .socials {
         width: 35%;
-    }
+    } */
     
     .form-content {
         margin: 1rem 0;
