--- a/portfolio.css
+++ b/portfolio.css
@@ -261,6 +261,10 @@ form {
     .form-content input {
         width: 67%;
     }
+
+    .form-content label {
+        font-size: 1rem;
+    }
     
     
     .button input {
